--- a/package.json
+++ b/package.json
@@ -6,23 +6,37 @@
   "dependencies": {
     "apollo-server-express": "^2.17.0",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.12.2",
+    "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
+    "ioredis": "^4.17.3",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0",
-    "typeorm": "^0.2.26"
+    "typeorm": "^0.2.26",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.14",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.0",
     "@types/graphql": "^14.5.0",
+    "@types/ioredis": "^4.17.4",
     "@types/node": "^14.10.0",
+    "@types/nodemailer": "^6.4.0",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "ts-node-dev --respawn src/index.ts"
   }
 }
