--- a/package.json
+++ b/package.json
@@ -26,17 +26,24 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
+    "@types/faker": "^5.1.0",
     "@types/graphql": "^14.5.0",
     "@types/ioredis": "^4.17.4",
+    "@types/jest": "^26.0.13",
     "@types/node": "^14.10.0",
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
+    "faker": "^5.1.0",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
+    "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "ts-node-dev --respawn src/index.ts"
+    "start": "ts-node-dev --respawn src/index.ts",
+    "db:setup": "ts-node ./src/test-utils/setup.ts",
+    "test": "npm run db:setup && jest"
   }
 }
